# sozluk

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: make_docker_image.yml
sozluk/: __init__.py  app.py  authorname.py  entry.py  fix_crlf.py  forms.py  human.py  humancapability.py  migrate.py  migrate_to_db.py  themes.py  topicname.py  turkishlowercasedstring.py
sozluk/static/: barbie.css  black.css  focus.css  nerd.css  normal.css  sozluk.css
sozluk/storage/: __init__.py  committedmemorydb.py  sqlalchemydatabase.py
sozluk/templates/: 404.html  about.html  author.html  authors.html  entry.html  index.html  layout.html  random.html  search.html  settings.html  stats.html  theemoji.html  theme.html  topic.html  topics.html
tests/: test_authorname.py  test_topicname.py  test_turkishlowercasedstring.py
